--- a/app/src/main/res/layout/fragment_geostory_share.xml
+++ b/app/src/main/res/layout/fragment_geostory_share.xml
@@ -52,7 +52,6 @@
                         android:layout_weight="1"
                         android:fontFamily="@font/pangolin_regular"
                         android:textSize="20sp"
-                        android:textAlignment="left"
                         android:textColor="@color/greyPrimaryDark"
                         android:text="This is for the adult. Can you tell a story from the prompt below and give an example for your child to answer similar questions from storybooks?" />
 
@@ -187,6 +186,20 @@
             android:orientation="vertical"
             android:gravity="bottom">
 
+            <Button
+                android:id="@+id/button_change_location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:padding="8dp"
+                android:text="Change Location"
+                android:fontFamily="@font/storywell_handwriting"
+                android:background="@drawable/rounded_gray_button"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:visibility="gone"/>
+
             <fragment
                 android:id="@+id/map"
                 android:name="com.google.android.gms.maps.SupportMapFragment"
@@ -227,6 +240,7 @@
                         android:id="@+id/button_back"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
                         android:background="@drawable/rounded_secondary_button"
                         android:drawableStart="@drawable/ic_round_delete_outline_24px"
                         android:fontFamily="@font/storywell_handwriting"
@@ -238,6 +252,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
+                    <!--
                     <Button
                         android:id="@+id/button_edit"
                         android:layout_width="wrap_content"
@@ -254,11 +269,13 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
+                    -->
 
                     <Button
                         android:id="@+id/button_share"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
                         android:background="@drawable/rounded_primary_button"
                         android:drawableEnd="@drawable/ic_send_24px"
                         android:fontFamily="@font/storywell_handwriting"
