--- a/app/src/main/res/layout/layout_storymap_viewer.xml
+++ b/app/src/main/res/layout/layout_storymap_viewer.xml
@@ -146,21 +146,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginEnd="50dp"
-            android:layout_marginTop="8dp"
             android:fontFamily="@font/storywell_handwriting"
             android:text="I'm a mother of two children. I'm about 25 years old. My hobby is reading novels."
             android:textColor="@android:color/black"
             android:textSize="16sp"
-            app:layout_constraintTop_toBottomOf="@+id/family_info" />
-
-        <ImageButton
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:src="@drawable/ic_edit_24px"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="@+id/caregiver_avatar"
-            app:layout_constraintStart_toStartOf="@+id/caregiver_avatar"
             app:layout_constraintTop_toBottomOf="@+id/family_info" />
 
     </android.support.constraint.ConstraintLayout>
@@ -169,10 +158,10 @@
         android:id="@+id/divider1"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:visibility="visible"
+        android:visibility="gone"
         android:background="@android:color/darker_gray"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -182,11 +171,11 @@
         android:id="@+id/playback_progress_bar"
         android:layout_width="@dimen/actionbar_progress_button_size"
         android:layout_height="@dimen/actionbar_progress_button_size"
-        android:layout_margin="18dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginStart="4dp"
         android:alpha="0.0"
         android:max="3600"
         android:progress="60"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/overview"
         style="?android:attr/progressBarStyle" />
@@ -195,17 +184,15 @@
         android:id="@+id/button_play"
         android:layout_width="@dimen/actionbar_button_size"
         android:layout_height="@dimen/actionbar_button_size"
-        android:layout_centerInParent="true"
-        android:layout_margin="32dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="14dp"
         android:background="@drawable/round_button_hot"
+        android:contentDescription="Play button to hear the family story."
         android:elevation="10dp"
         android:src="@drawable/ic_round_play_arrow_big"
         android:tint="@color/colorPrimaryDark"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/overview"
-        android:contentDescription="Play button to hear the family story." />
+        app:layout_constraintTop_toBottomOf="@+id/overview" />
 
     <Button
         android:id="@+id/button_respond_story"
@@ -216,17 +203,32 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/rounded_gray_button"
         android:fontFamily="@font/storywell_handwriting"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
         android:text="Respond"
+        android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:visibility="visible"
-        android:textColor="@color/black"
-        app:layout_constraintTop_toTopOf="@+id/button_play"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/button_play"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button_play" />
+        app:layout_constraintTop_toTopOf="@+id/button_play" />
+
+    <Button
+        android:id="@+id/button_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/rounded_gray_button"
+        android:fontFamily="@font/storywell_handwriting"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:text="Edit info &amp; icon"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/button_play"
+        app:layout_constraintEnd_toEndOf="parent" />
     <!--
         <Button
             android:id="@+id/button_play"
