--- a/app/src/main/res/layout/layout_storymap_viewer.xml
+++ b/app/src/main/res/layout/layout_storymap_viewer.xml
@@ -2,10 +2,11 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/storymap_viewer_expanded_height"
     android:background="@color/storymap_dark"
-    android:elevation="8dp"
+    android:elevation="16dp"
     android:orientation="vertical"
     app:behavior_hideable="true"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
@@ -14,31 +15,45 @@
         android:id="@+id/overview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/storymap_dark"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent">
+
+        <ImageView
+            android:id="@+id/caregiver_avatar"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@mipmap/geostory_marker_high_default" />
 
         <TextView
             android:id="@+id/overviewText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:layout_marginEnd="0dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
             android:fontFamily="@font/storywell_handwriting"
             android:gravity="start"
             android:text="Community Story - "
             android:textColor="@color/greyPrimaryDark"
-            android:textStyle="bold"
             android:textSize="12sp"
-            app:textAllCaps="true"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:textAllCaps="true" />
 
         <TextView
             android:id="@+id/posted_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:layout_marginStart="0dp"
+            android:layout_marginStart="4dp"
             android:fontFamily="@font/storywell_handwriting"
             android:gravity="start"
             android:text="2 hours ago"
@@ -48,19 +63,6 @@
             app:textAllCaps="true"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@+id/overviewText"/>
-
-        <ImageView
-            android:id="@+id/caregiver_avatar"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_margin="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginTop="16dp"
-            android:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@mipmap/geostory_marker_high_default" />
 
         <TextView
             android:id="@+id/caregiver_nickname"
@@ -78,16 +80,17 @@
 
         <LinearLayout
             android:id="@+id/family_info"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/caregiver_nickname"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/caregiver_nickname">
 
             <LinearLayout
                 android:id="@+id/steps_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
+
                 <TextView
                     android:id="@+id/average_label"
                     android:layout_width="wrap_content"
@@ -146,89 +149,88 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
             android:fontFamily="@font/storywell_handwriting"
             android:text="I'm a mother of two children. I'm about 25 years old. My hobby is reading novels."
             android:textColor="@android:color/black"
             android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/family_info" />
 
     </android.support.constraint.ConstraintLayout>
 
-    <View
-        android:id="@+id/divider1"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/control_area"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:visibility="gone"
-        android:background="@android:color/darker_gray"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/overview"/>
-
-    <ProgressBar
-        android:id="@+id/playback_progress_bar"
-        android:layout_width="@dimen/actionbar_progress_button_size"
-        android:layout_height="@dimen/actionbar_progress_button_size"
-        android:layout_marginTop="0dp"
-        android:layout_marginStart="4dp"
-        android:alpha="0.0"
-        android:max="3600"
-        android:progress="60"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/overview"
-        style="?android:attr/progressBarStyle" />
-
-    <ImageButton
-        android:id="@+id/button_play"
-        android:layout_width="@dimen/actionbar_button_size"
-        android:layout_height="@dimen/actionbar_button_size"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="14dp"
-        android:background="@drawable/round_button_hot"
-        android:contentDescription="Play button to hear the family story."
-        android:elevation="10dp"
-        android:src="@drawable/ic_round_play_arrow_big"
-        android:tint="@color/colorPrimaryDark"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/overview" />
-
-    <Button
-        android:id="@+id/button_respond_story"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/rounded_gray_button"
-        android:fontFamily="@font/storywell_handwriting"
-        android:text="Respond"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@+id/button_play"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/button_play" />
+        android:background="@color/storymap_control"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-    <Button
-        android:id="@+id/button_edit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_marginEnd="8dp"
-        android:background="@drawable/rounded_gray_button"
-        android:fontFamily="@font/storywell_handwriting"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:text="Edit info &amp; icon"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:visibility="gone"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="@+id/button_play"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <ProgressBar
+            android:id="@+id/playback_progress_bar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="@dimen/actionbar_progress_button_size"
+            android:layout_height="@dimen/actionbar_progress_button_size"
+            android:alpha="0"
+            android:max="3600"
+            android:progress="60"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/button_play"
+            android:layout_width="@dimen/actionbar_button_size"
+            android:layout_height="@dimen/actionbar_button_size"
+            android:layout_marginStart="14dp"
+            android:layout_marginTop="14dp"
+            android:background="@drawable/round_button_hot"
+            android:contentDescription="Play button to hear the family story."
+            android:elevation="10dp"
+            android:src="@drawable/ic_round_play_arrow_big"
+            android:tint="@color/colorPrimaryDark"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/button_respond_story"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/rounded_gray_button"
+            android:fontFamily="@font/storywell_handwriting"
+            android:text="Respond"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/button_play"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/button_play" />
+
+        <Button
+            android:id="@+id/button_edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/rounded_gray_button"
+            android:fontFamily="@font/storywell_handwriting"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:text="Edit info &amp; icon"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/button_play"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
     <!--
         <Button
             android:id="@+id/button_play"
@@ -262,17 +264,5 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/caregiver_avatar" />
             -->
-
-    <View
-        android:id="@+id/divider2"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:background="@color/storymap_dark"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_play"/>
 
 </android.support.constraint.ConstraintLayout>
