--- a/app/src/main/res/layout/fragment_story_memo.xml
+++ b/app/src/main/res/layout/fragment_story_memo.xml
@@ -12,98 +12,127 @@
     android:id="@+id/storyMemo">
 
     <TextView
-        android:id="@+id/text"
-        android:layout_width="match_parent"
+        android:id="@+id/text_the_end"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="24dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:text="@string/story_default_title"
-        android:textSize="28sp"
-        android:textColor="@color/colorPrimaryText"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/storywell_serif"
+        android:text="@string/the_end_congrats"
         android:textAlignment="center"
-        android:theme="@style/AppTheme.MemoView.text"
-        app:layout_constraintBottom_toTopOf="@+id/button_area"
+        android:textColor="@color/colorPrimaryText"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/action_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.391" />
+        app:layout_constraintVertical_bias="0.31" />
+
+    <ImageView
+        android:id="@+id/memo_image_bg"
+        android:layout_width="98dp"
+        android:layout_height="98dp"
+        android:src="@drawable/art_book_cover_bg"
+        app:layout_constraintStart_toStartOf="@+id/memo_image"
+        app:layout_constraintTop_toTopOf="@+id/memo_image"
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/memo_image"
         android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_height="@dimen/storymap_viewer_peek_height"
+        android:layout_marginStart="48dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/instruction"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/geostory_icon"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/text"
-        app:srcCompat="@mipmap/geostory_marker_treasure_brown" />
+        app:srcCompat="@drawable/art_cover_default"
+        tools:visibility="visible" />
+
+    <ImageView
+        android:id="@+id/geostory_icon"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginBottom="48dp"
+        app:layout_constraintBottom_toTopOf="@+id/action_button"
+        app:layout_constraintEnd_toEndOf="@+id/memo_image"
+        app:layout_constraintStart_toStartOf="@+id/memo_image"
+        app:srcCompat="@mipmap/geostory_marker_treasure_brown"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="32dp"
+        android:fontFamily="@font/storywell_handwriting"
+        android:text="@string/story_default_title"
+        android:textAlignment="textStart"
+        android:textColor="@color/colorPrimaryText"
+        android:textSize="20sp"
+        android:theme="@style/AppTheme.MemoView.text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/memo_image"
+        app:layout_constraintTop_toTopOf="@+id/memo_image"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/subtext"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/text"
         android:layout_centerHorizontal="true"
-        android:layout_marginEnd="24dp"
-        android:layout_marginStart="24dp"
-        android:text=""
+        android:layout_marginEnd="32dp"
+        android:fontFamily="@font/storywell_handwriting"
+        android:text="You also unlocked ..."
+        android:textAlignment="textStart"
+        android:textColor="@color/colorPrimaryText"
+        android:textSize="18sp"
         android:theme="@style/AppTheme.MemoView.subtext"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/text"
+        app:layout_constraintTop_toTopOf="@+id/geostory_icon"
+        tools:visibility="visible" />
+
+    <Button
+        android:id="@+id/action_button"
+        android:layout_width="@dimen/actionbar_button_size"
+        android:layout_height="@dimen/actionbar_button_size"
+        android:layout_below="@id/action_button"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/round_button_hot"
+        android:fontFamily="@font/storywell_handwriting"
+        android:text="@string/calming_memo_button_default"
+        android:textColor="@color/colorAccentText"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/instruction"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/memo_image"  />
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/instruction"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/text"
-        android:layout_centerHorizontal="true"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginStart="24dp"
+        android:fontFamily="@font/storywell_handwriting"
         android:text="Press Unlock to continue"
-        android:textSize="24sp"
-        android:textColor="@color/colorPrimaryText"
         android:textAlignment="center"
+        android:textColor="@color/colorPrimaryText"
+        android:textSize="18sp"
         android:theme="@style/AppTheme.MemoView.subtext"
-        app:layout_constraintBottom_toTopOf="@+id/button_area"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <RelativeLayout
-        android:id="@+id/button_area"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/actionbar_size"
-        android:layout_gravity="center"
-        android:background="@color/colorPrimary"
-        android:orientation="vertical"
-        android:padding="@dimen/actionbar_padding"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <Button
-            android:id="@+id/action_button"
-            android:layout_width="@dimen/actionbar_button_size"
-            android:layout_height="@dimen/actionbar_button_size"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/round_button_hot"
-            android:text="@string/calming_memo_button_default"
-            android:textColor="@color/colorAccentText"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:fontFamily="@font/storywell_handwriting" />
-
-    </RelativeLayout>
+        tools:layout_editor_absoluteX="24dp" />
 
 
 </android.support.constraint.ConstraintLayout>
