--- a/app/src/main/res/layout/layout_resolution_intro.xml
+++ b/app/src/main/res/layout/layout_resolution_intro.xml
@@ -2,37 +2,50 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="@dimen/resolution_margin">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/intro_heading_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:fontFamily="@font/storywell_handwriting"
         android:text="@string/resolution_intro_text_1"
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
         android:textSize="28sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/intro_heading_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:fontFamily="@font/storywell_handwriting"
         android:text="@string/resolution_intro_text_2"
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
         android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/intro_heading_1" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="@dimen/resolution_margin"
+        android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toTopOf="@id/resolution_next_button"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/intro_heading_2">
 
@@ -45,7 +58,6 @@
                 android:id="@+id/item_balloon_pass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/resolution_icon_margin"
                 android:paddingTop="@dimen/resolution_icon_margin">
 
                 <ImageView
@@ -61,7 +73,30 @@
                     android:text="@string/resolution_balloon_pass_info"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black_semi"
-                    android:textSize="20sp" />
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/item_balloon_geostory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/resolution_icon_margin">
+
+                <ImageView
+                    android:layout_width="@dimen/roulette_balloon_size"
+                    android:layout_height="@dimen/roulette_balloon_size"
+                    android:layout_marginEnd="@dimen/resolution_icon_margin"
+                    android:src="@drawable/art_roulette_baloon_geostory" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/storywell_handwriting"
+                    android:text="@string/resolution_balloon_geostory_info"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/black_semi"
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
@@ -69,7 +104,6 @@
                 android:id="@+id/item_balloon_answer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/resolution_icon_margin"
                 android:paddingTop="@dimen/resolution_icon_margin">
 
                 <ImageView
@@ -85,7 +119,7 @@
                     android:text="@string/resolution_balloon_idea_info"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black_semi"
-                    android:textSize="20sp" />
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
@@ -93,7 +127,6 @@
                 android:id="@+id/item_balloon_regular"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/resolution_icon_margin"
                 android:paddingTop="@dimen/resolution_icon_margin">
 
                 <ImageView
@@ -109,7 +142,7 @@
                     android:text="@string/resolution_balloon_regular_info"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black_semi"
-                    android:textSize="20sp" />
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
@@ -120,15 +153,20 @@
 
     <Button
         android:id="@+id/resolution_next_button"
+        style="@style/AppTheme.ActionButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/storywell_handwriting"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/rounded_primary_button"
-        android:textStyle="bold"
-        android:textSize="18sp"
+        android:fontFamily="@font/storywell_handwriting"
         android:text="Next"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        style="@style/AppTheme.ActionButton" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 
