--- a/app/src/main/res/layout/fragment_geostory_share.xml
+++ b/app/src/main/res/layout/fragment_geostory_share.xml
@@ -195,6 +195,7 @@
                 android:padding="8dp"
                 android:text="Change Location"
                 android:fontFamily="@font/storywell_handwriting"
+                android:textStyle="bold"
                 android:background="@drawable/rounded_gray_button"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -280,7 +281,7 @@
                         android:background="@drawable/rounded_primary_button"
                         android:drawableEnd="@drawable/ic_send_24px"
                         android:fontFamily="@font/storywell_handwriting"
-                        android:text="Share"
+                        android:text="Share "
                         android:textSize="16sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
